# euclidean-pattern-external

./: .gitignore  CMakeLists.txt  LICENSE  README.txt
builds/osx/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/osx/modules/euclidean_pattern/: Makefile  cmake_install.cmake
builds/osx/modules/euclidean_pattern/MaxPdObject/: Makefile  cmake_install.cmake
builds/win-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/win-mingw/modules/euclidean_pattern/: Makefile  cmake_install.cmake
builds/win-mingw/modules/euclidean_pattern/MaxPdObject/: Makefile  cmake_install.cmake
modules/MaxPdObject/: CMakeLists.txt  MaxPdObject.hpp
modules/euclidean_pattern/: CMakeLists.txt
modules/euclidean_pattern/src/: EuclideanPattern.cpp  EuclideanPattern.hpp  Object.cpp
scripts/: build-osx.sh  build-win-mingw32.sh
